<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingsActivity">


    <View
        android:id="@+id/viewsettings"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/settings_backview"
        android:layout_alignParentTop="true"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="70dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorAccent"
        />

    <ProgressBar
        android:id="@+id/profile_imageLoading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="?android:attr/progressBarStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="120dp"/>


    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewsettings"
        android:layout_above="@id/Finishsetup"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingVertical="30dp">
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/usernamedisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_name"
            android:textColorHint="#D7A2A5A4"
            android:layout_marginBottom="50dp"
            android:textSize="15sp"
            android:textColor="#142027"
            android:elevation="8dp"
            android:background="@drawable/inputs"
            android:padding="5dp"
            app:drawableEndCompat="@drawable/ic_baseline_edit_24"
            android:drawablePadding="5dp"/>
        <TextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bio"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/biodisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_about_you"
            android:textColorHint="#D7A2A5A4"
            android:textSize="15sp"
            android:textColor="#142027"
            android:elevation="8dp"
            android:background="@drawable/inputs"
            android:padding="5dp"
            app:drawableEndCompat="@drawable/ic_baseline_edit_24"
            android:drawablePadding="5dp"/>

    </LinearLayout>




    <Button
        android:id="@+id/Finishsetup"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_setup"
        android:textAlignment="center"
        android:background="@drawable/settings_backview"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />




</RelativeLayout>